--- a/frontend/index.html
+++ b/frontend/index.html
@@ -299,6 +299,7 @@
         }
       }
     </style>
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="3d1f7ac4-530a-4acf-ae7e-40e25926e224"></script>
   </head>
   <body>
     <div class="page">
